# diffsol

./: .dockerignore  .gitconfig  .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  \  benchmarks.html  build.rs  choosing_a_solver.html  constant_functions.html  custom_problem_structs.html  diffsl.html  forward_sensitivity.html  index.html  initialisation.html  linear_functions.html  mass_matrix.html  non_linear_functions.html  ode_equations.html  out  print.html  putting_it_all_together.html  root_finding.html  searchindex.js  searchindex.json  solving_the_problem.html  sparse_problems.html  specifying_the_problem.html  test_par  toc.html  toc.js
book/: .gitignore  Cargo.toml  book.toml
book/src/: SUMMARY.md  benchmarks.md  choosing_a_solver.md  constant_functions.md  custom_problem_structs.md  diffsl.md  forward_sensitivity.md  initialisation.md  mass_matrix.md  non_linear_functions.md  ode_equations.md  putting_it_all_together.md  root_finding.md  solution_of_odes.md  solving_the_problem.md  sparse_problems.md  specifying_the_problem.md  stopping_time.md  time-stepping.md
book/src/benchmarks/: benchmarks.md  python.md  sundials.md
book/src/primer/: backwards_sensitivity_analysis.md  bouncing_ball.md  chemical_kinetics.md  compartmental_models_of_drug_delivery.md  discrete_events.md  dosing_protocols.md  electrical_circuits.md  first_order_odes.md  forward_sensitivity_analysis.md  heat_equation.md  higher_order_odes.md  hybrid.md  modelling_with_diffsol.md  modelling_with_odes.md  pdes.md  pdes_using_method_of_lines.md  physics_based_battery_simulation.md  population_dynamics.md  population_dynamics_fitting.md  sir_policy_switching.md  spatial_population_dynamics.md  spring_mass_fitting.md  spring_mass_systems.md  the_mass_matrix.md  weather_neural_ode.md
book/src/solve/: adjoint_sens.md  forward_sens.md  interpolation.md  manual-time-stepping.md  solving_the_problem.md  stopping.md  stopping_event.md  stopping_time.md
book/src/solver/: creating_a_solver.md  initialisation.md  tableau.md
book/src/specify/: diffsl.md  mass_matrix.md  ode_equations.md  root_finding.md  sparse_problems.md  specifying_the_problem.md
book/src/use/: c.md  python.md  use_from_other_languages.md  webassembly-jit.md  webassembly.md
book/theme/: head.hbs
crates/diffsol/: Cargo.toml
crates/diffsol/benches/: README.md  compare_ops.py  ode_solvers_ci.rs
crates/diffsol/src/: error.rs
diffsol/: Cargo.toml  build.rs  wrapper.h
diffsol-c/: Cargo.toml
diffsol-c/src/: adjoint_checkpoint.rs  c_api_utils.rs  checkpointing_wrapper.rs  error.rs  error_c.rs  host_array.rs  host_array_c.rs  initial_condition_options.rs  initial_condition_options_c.rs  jit.rs  jit_c.rs  lib.rs  linear_solver_type.rs  linear_solver_type_c.rs  matrix_type.rs  matrix_type_c.rs  ode.rs  ode_c.rs  ode_options.rs  ode_options_c.rs  ode_solver_tag.rs  ode_solver_type.rs  ode_solver_type_c.rs  scalar_type.rs  scalar_type_c.rs  solution.rs  solution_wrapper.rs  solution_wrapper_c.rs  solve.rs  solve_macros.rs  string_c.rs  test_support.rs  valid_linear_solver.rs
diffsol-c/tests/: hybrid_logistic_jit.rs  logistic_hybrid_jit.rs  logistic_jit.rs  logistic_stop_jit.rs  logistic_time_reset_jit.rs
diffsol-c/tests/common/: mod.rs
diffsol-la/: Cargo.toml  README.md  build.rs
diffsol-la/src/context/: cuda.rs
diffsol-la/src/cuda_kernels/: mat_get_diagonal.cu  mat_set_column.cu  vec_axpy_offset.cu
diffsol-la/src/matrix/: dense_faer_serial.rs  dense_nalgebra_serial.rs  sparsity.rs
diffsol-la/src/scalar/: cuda.rs  mod.rs
diffsol-mcp/: Cargo.toml
diffsol-mcp/docs/: diffsl.md
diffsol-mcp/src/: config.rs  error.rs  main.rs  problem.rs  server.rs
diffsol-nl/: Cargo.toml
diffsol-nl/src/: error.rs  line_search.rs
diffsol/benches/: bench_report.py  common.rs  lin_alg_ops.rs  ode_solvers.rs  ode_solvers_ci.rs  plot.py  pybamm_dfn.diffsl  pybamm_dfn.rs  pybamm_dfn_exp.diffsl  sundials_benches.rs
diffsol/benches/sundials/: cvRoberts_block_klu_v5.c  cvRoberts_block_klu_v6.c  cvRoberts_block_klu_v6_7.c  idaFoodWeb_bnd_10.c  idaFoodWeb_bnd_20.c  idaFoodWeb_bnd_30.c  idaFoodWeb_bnd_5.c  idaFoodWeb_bnd_v6_7.c  idaHeat2d_bnd_10.c  idaHeat2d_bnd_20.c  idaHeat2d_klu_v5.c  idaHeat2d_klu_v6.c  idaRoberts_dns.c  idaRoberts_dns_v5.c
diffsol/src/: error.rs  lib.rs
diffsol/src/context/: cuda.rs  faer.rs  mod.rs  nalgebra.rs
diffsol/src/cuda_kernels/: all.cu  cuda_kernels_common.h  mat_from_diagonal.cu  mat_get_diagonal.cu  mat_scale_add_assign.cu  mat_set_column.cu  mat_set_data_with_indices.cu  vec_add.cu  vec_add_assign.cu  vec_add_assign_rhs.cu  vec_assign_at_indices.cu  vec_copy.cu  vec_copy_from_indices.cu  vec_div_assign.cu  vec_fill.cu  vec_gather.cu  vec_mul_assign.cu  vec_mul_assign_scalar.cu  vec_mul_scalar.cu  vec_root_finding.cu  vec_scatter.cu  vec_squared_norm.cu  vec_sub.cu  vec_sub_assign.cu  vec_sub_assign_rhs.cu
diffsol/src/jacobian/: mod.rs
diffsol/src/linear_solver/: mod.rs
diffsol/src/matrix/: cuda.rs  dense_faer_serial.rs  dense_nalgebra_serial.rs  extract_block.rs  mod.rs  sparse_faer.rs  sparse_serial.rs  sparsity.rs  sundials.rs  utils.rs
diffsol/src/nonlinear_solver/: convergence.rs  line_search.rs  mod.rs  newton.rs  root.rs
diffsol/src/ode_equations/: adjoint_equations.rs  diffsl.rs  external_linkage.rs  mod.rs  (+1 more)
diffsol/tests/: external_linkage.rs  pybamm_dfn_exp.rs
examples/lid-driven-cavity-stokes/: .gitignore  Cargo.toml  README.md  run.sh
examples/lorenz-attractor-diffsl-llvm/: Cargo.toml
examples/mass-spring-fitting-adjoint/: Cargo.toml
examples/neural-ode-pk-dosing/: Cargo.toml
examples/neural-ode-weather-prediction/: .gitignore  Cargo.toml  README.md  model.py  neural-ode-weather_1  neural-ode-weather_5  requirements.txt  rhs.onnx  rhs_jac_mul.onnx  rhs_jac_transpose_mul.onnx  rhs_sens_transpose_mul.onnx
examples/pde-heat/: Cargo.toml
examples/population-dynamics-wasm-yew/: Cargo.toml  README.md  index.html
examples/predator-prey-fitting-forward/: Cargo.toml
examples/python-diffsol/: Cargo.toml  pyproject.toml
(+556 files in other folders)
