[workspace]
members = ["diffsol", "examples/*"]
default-members = ["diffsol"]
exclude = ["book"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
readme = "diffsol/README.md"
authors = ["Martin Robinson <martinjrobins@gmail.com>"]
repository = "https://github.com/martinjrobins/diffsol"

[workspace.dependencies]
nalgebra = "0.33.2"
faer = "0.21.9"
cudarc = { version = "0.16.4", default-features = false }

plotly = { version = "0.12.1" }
argmin = { version = "0.10.0" }
argmin-math = { version = "0.4" }
argmin-observer-slog = { version = "0.1.0" }
ort = "=2.0.0-rc.9"
ort-sys = { version = "=2.0.0-rc.9", default-features = false }

[profile.profiling]
inherits = "release"
debug = true
