[workspace]
members = ["diffsol", "examples/*"]
default-members = ["diffsol"]
exclude = ["book"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
readme = "diffsol/README.md"
authors = ["Martin Robinson <martinjrobins@gmail.com>"]
repository = "https://github.com/martinjrobins/diffsol"

[workspace.dependencies]
nalgebra = "0.34.1"
faer = { version = "0.23.2", default-features = false, features = [
    "std",
    "sparse-linalg",
    "rand",
    "npy",
] }
faer-traits = "0.23.2"
cudarc = { version = "0.19.3", default-features = false }

plotly = { version = "0.13.5" }
argmin = { version = "0.11.0" }
argmin-math = { version = "0.5.1" }
argmin-observer-slog = { version = "0.2.0" }
ort = "=2.0.0-rc.10"
ort-sys = { version = "=2.0.0-rc.10", default-features = false }

[profile.profiling]
inherits = "release"
debug = true
