[workspace]
members = ["diffsol", "diffsol-c", "examples/*"]
default-members = ["diffsol", "diffsol-c"]
exclude = ["book"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
readme = "diffsol/README.md"
authors = ["Martin Robinson <martinjrobins@gmail.com>"]
repository = "https://github.com/martinjrobins/diffsol"

[workspace.dependencies]
nalgebra = "0.34"
faer = { version = "0.24", default-features = false, features = [
    "std",
    "sparse-linalg",
    "rand",
    "npy",
] }
faer-traits = "0.24"
cudarc = { version = "0.19", default-features = false }
diffsl = { version = "0.11.1", features = ["rayon"] }

plotly = { version = "0.14" }
argmin = { version = "0.11.0" }
argmin-math = { version = "0.5.1" }
argmin-observer-slog = { version = "0.2.0" }
ort = "=2.0.0-rc.10"
ort-sys = { version = "=2.0.0-rc.10", default-features = false }
paste = "1.0.15"
num-traits = "0.2.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.profiling]
inherits = "release"
debug = true
