[package]
name = "diffsol-c"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = []
wasm = ["getrandom/js"]
suitesparse = []
external = []
external-f64 = ["external", "diffsol/diffsl-external-f64", "diffsl/external_f64"]
external-f32 = ["external", "diffsol/diffsl-external-f32", "diffsl/external_f32"]
diffsl-cranelift = ["diffsol/diffsl-cranelift"]
diffsl-llvm = []
diffsl-llvm15 = ["diffsol/diffsl-llvm15", "diffsl-llvm"]
diffsl-llvm16 = ["diffsol/diffsl-llvm16", "diffsl-llvm"]
diffsl-llvm17 = ["diffsol/diffsl-llvm17", "diffsl-llvm"]
diffsl-llvm18 = ["diffsol/diffsl-llvm18", "diffsl-llvm"]
diffsl-llvm19 = ["diffsol/diffsl-llvm19", "diffsl-llvm"]
diffsl-llvm20 = ["diffsol/diffsl-llvm20", "diffsl-llvm"]
diffsl-llvm21 = ["diffsol/diffsl-llvm21", "diffsl-llvm"]

[dependencies]
diffsl = { workspace = true }
diffsol = { path = "../diffsol", features = ["diffsl"] }
dlmalloc = { version = "0.2", features = ["global"] }
faer = { version = "0.23.2", default-features = false, features = ["std", "sparse-linalg", "rand", "npy",] }
nalgebra = { version = "0.34.1", features = ["std"] }
ndarray = { version = "0.17.2" }
num-traits = "0.2.19"
paste = "1.0.15"
getrandom = { version = "0.2", optional = true }


[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.wasm32-wasip1.dependencies]
getrandom = { version = "0.2", features = ["js"] }
