[package]
name = "diffsol-la"
version = "0.16.0"
edition.workspace = true
description = "Linear algebra traits and backends (vectors, matrices, linear solvers) for diffsol."
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = ["nalgebra", "faer"]
faer = []
nalgebra = []
cuda = ["dep:cudarc"]
suitesparse = ["dep:suitesparse_sys"]

[dependencies]
nalgebra = { workspace = true }
num-traits = { workspace = true }
thiserror = "2.0"
faer-traits = { workspace = true }
suitesparse_sys = { version = "0.1", optional = true }
cudarc = { workspace = true, optional = true, default-features = false, features = [
  "cuda-version-from-build-system",
  "cusolver",
  "dynamic-linking",
  "std",
  "cublas",
  "cublaslt",
  "curand",
  "driver",
  "runtime",
  "nvrtc",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
faer = { workspace = true, features = ["rayon"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
faer = { workspace = true }

[dev-dependencies]
paste = { workspace = true }
