[package]
name = "diffsol-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["diffsl-cranelift"]
diffsl-cranelift = ["diffsol-c/diffsl-cranelift"]
diffsl-llvm21 = ["diffsol-c/diffsl-llvm21"]
suitesparse = ["diffsol-c/suitesparse"]

[dependencies]
diffsol-c = { path = "../diffsol-c", default-features = false }
rmcp = { version = "1.3.0", features = ["client", "server", "transport-io", "macros"] }
schemars = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1.0"
