[package]
name = "neural-ode-pk-dosing"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
diffsol = { path = "../../diffsol" }
nalgebra = { workspace = true }
plotly = { workspace = true }
csv = "1.3.1"
burn = { version = "0.20.0", features = ["ndarray"] }
num-traits = "0.2.19"
ndarray = "0.17.2"

[[bin]]
name = "neural-ode-pk-dosing"
