[package]
name = "neural-ode-weather-prediction"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
diffsol = { path = "../../diffsol" }
nalgebra = { workspace = true }
plotly = { workspace = true }
ort = { workspace = true }
ort-sys = { workspace = true }
ndarray = "0.16.1"
csv = "1.3.1"
rand = "0.9.0"