[package]
name = "pde-heat"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
diffsl-llvm15 = ["diffsol/diffsl-llvm15"]
diffsl-llvm16 = ["diffsol/diffsl-llvm16"]
diffsl-llvm17 = ["diffsol/diffsl-llvm17"]
diffsl-llvm18 = ["diffsol/diffsl-llvm18"]

[dependencies]
diffsol = { path = "../../diffsol", features = ["diffsl-cranelift"] }
faer = { workspace = true }
plotly = { workspace = true }