[package]
name = "population-dynamics-wasm-yew"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
diffsol = { path = "../../diffsol", features = [] }
nalgebra = { workspace = true }
yew-plotly = "0.3.0"
web-sys = "0.3.77"
getrandom = { version = "0.3", features = ["wasm_js"] }
platform = "1.0.2"
